@startuml
skinparam nodesep 75
'skinparam ranksep 60

title <b>原型模式</b>

class Client {
  - prototype :Prototype
}
note top: 让原型克隆自身\n从而创建一个新的对象

class Prototype {
  + clone() :Prototype
}
note top: 原型类，声明一个克隆自身的接口。

class ConcretePrototype1 {
  + clone() :Prototype
}

class ConcretePrototype2 {
  + clone() :Prototype
}

Client "-prototype" -right-> Prototype

Prototype <|-- ConcretePrototype1
Prototype <|-- ConcretePrototype2

note "具体原型类，实现一个克隆自身的操作。" as cpn
ConcretePrototype1 .. cpn
ConcretePrototype2 .. cpn

@enduml
